--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.11.2",
+    "socket.io-client": "^4.7.1",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
